[package]
name = "reindexer-rs"
version = "0.1.0"
authors = ["Frank Zhou <529808348@qq.com>"]
edition = "2018"
repository = "https://github.com/coinrust/reindexer-rs"
readme = "README.md"
description = "Reindexer library for Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reindexer-sys = { path = "reindexer-sys", version = "0.1.0" }

[workspace]
members = ["reindexer-sys", "examples"]
