[package]
name = "reindexer-examples"
version = "0.2.0"
authors = ["Frank Zhou <529808348@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reindexer-sys = { path = "../reindexer-sys", version = "0.2" }
reindexer-rs = { path = "..", version = "0.2" }
