[package]
name = "reindexer-sys"
version = "0.2.0"
authors = ["Frank Zhou <529808348@qq.com>"]
edition = "2018"
keywords = ["reindexer","rust"]
repository = "https://github.com/coinrust/reindexer-rs"
readme = "README.md"
description = "The Rust FFI bindings of Reindexer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.49"
